--- a/templates/default/stylesheets/layout.css
+++ b/templates/default/stylesheets/layout.css
@@ -29,14 +29,14 @@
 }
 
 .post-list > li:hover {
-	background-color: #F1F1F1;
+	background-color: #D6E7F4;
 }
 
 .post-list > li > a {
 	color: #000;
 	text-decoration: none;
 	display: block;
-	padding: 3px;
+	padding: 3px 9px;
 }
 
 .post-list span.post_title {
@@ -80,14 +80,35 @@
 	border-radius: 0 70px 70px 0;
 }
 
+.sidebar-image {
+	display: block;
+}
+
+.post-update-date,
+.post-publish-date {
+	font-weight: bold;
+}
+
+.post-category {
+	font-weight: bold;
+}
+
 /* -- Header ------------------------------------- */
 
 body > header {
-	background-color: #90cce7;
+	background-color: #333;
+	color: #EEE;
 }
 
 body > header h1 {
 	font-size: 1.1em;
+	font-family: Verdana, sans-serif;
+	font-weight: bold;
+}
+
+body > header h1 > a {
+	color: #F5F5F5 !important;
+	text-decoration: none;
 }
 
 body > header ul {
@@ -103,12 +124,12 @@ body > header ul li {
 
 body > header ul li > a,
 body > header ul li > a:visited {
-	color: #000;
+	color: #EEE;
 }
 
 body > header ul li > a {
 	display: block;
-	padding: 0.3em 7px 0.1em 7px;
+	padding: 0.3em 10px 0.1em 10px;
 	border-radius: 5px 5px 0 0;
 	color: #000;
 	font-weight: bold;
@@ -116,12 +137,14 @@ body > header ul li > a {
 }
 
 body > header ul li > a:hover {
-	background-color: blue;
+	background-color: #111;
+	color: #FFF;
 }
 
 body > header ul li.current > a,
 body > header ul li.current > a:hover {
 	background-color: #FFF;
+	color: #111;
 }
 
 /* -- Footer ------------------------------------- */
