Center the navigation bar on mobile sites.

--- a/templates/default/stylesheets/layout.css
+++ b/templates/default/stylesheets/layout.css
@@ -264,6 +264,7 @@ body > footer a[rel=license] img {
 			margin: 0px auto;
 			padding: 1px;
 			float: none;
+			display: inline;
 		}
 		
 		body > header ul li  {
