--- a/pages/content/resume/style.css
+++ b/pages/content/resume/style.css
@@ -1,7 +1,3 @@
-.hresume {
-	
-}
-
 .hresume ul,
 .hresume ol {
 	padding-left: 20px;
@@ -87,8 +83,8 @@
 
 .hresume .project .project-link {
 	font-style: italic;
-	margin-left: 20px;
 	font-size: 0.9em;
+	float: right;
 }
 
 .hresume .guest-lecture .venue {
@@ -128,4 +124,28 @@
 
 .hresume .skill_list ul li {
 	margin: 2px 0;
+}
+
+/* -- Overrides for Mobile -------------------------------- */
+
+@media only screen and (max-width: 767px) {
+	
+	.hresume .contact_info > span {
+		float: none;
+		display: block;
+	}
+	
+	.hresume li {
+		padding-left: 0px;
+	}
+	
+	.hresume .date,
+	.hresume .project-link {
+		float: none !important;
+		display: block !important;
+		font-weight: normal !important;
+		font-style: italic;
+		font-size: 0.9em;
+	}
+	
 }
