--- a/templates/default/stylesheets/layout.css
+++ b/templates/default/stylesheets/layout.css
@@ -93,6 +93,43 @@
 	font-weight: bold;
 }
 
+.latest_post {
+	display: block;
+	border-radius: 10px;
+	background-color: #F1F1F1;
+	padding: 8px;
+	color: #000;
+	text-decoration: none;
+}
+
+.latest_post:hover {
+	background-color: #D6E7F4;
+}
+
+.latest_post > span {
+	color: #000;
+}
+
+.latest_post .latest_post_txt {
+	font-size: 0.9em;
+}
+
+.latest_post .latest_post_title {
+	font-weight: bold;
+}
+
+.latest_post .latest_post_date {
+	float: right;
+	font-size: 0.9em;
+}
+
+.latest_post .latest_post_summary {
+	font-size: 0.9em;
+	display: block;
+	color: #333;
+}
+
+
 /* -- Header ------------------------------------- */
 
 body > header {
