--- a/template/css/main.css
+++ b/template/css/main.css
@@ -179,6 +179,7 @@ mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: b
 body {
   font-family: Tahoma, Geneva, sans-serif;
   font-size: 16px;
+  background-color: #444;
 }
 
 h1, h2 {
@@ -186,6 +187,15 @@ h1, h2 {
 }
 
 /* Layout ---------------------------------------------------------------------*/
+
+body > header,
+body > #main {
+  background-color: #FFF;
+}
+
+body  > footer {
+  color: #FFF;
+}
 
 body > header > .content,
 body > #main  > .content, 
@@ -200,17 +210,22 @@ body > header h1 {
   font-size: 1.4em;
   width: 20%;
   font-weight: normal;
+}
+
+body > header h1 a {
   font-family: Vollkorn, serif;
   display: block;
   color: #333;
   text-decoration: none;
 }
 
-body > header h1 > span {
+body > header h1 a span {
   font-family: Tahoma, Geneva, sans-serif;
   display: block;
   color: #000;
   font-size: 14px;
+  margin-right: 20px;
+  padding-bottom: 6px;
 }
 
 
@@ -226,6 +241,7 @@ body > header nav ul > li a {
   font-size: 1.4em;
   color: #555;
   text-decoration: none;
+  width: 100%; 
 }
 
 body > header nav ul > li a > span {
@@ -233,6 +249,15 @@ body > header nav ul > li a > span {
   display: block;
   color: #000;
   font-size: 14px;
+  margin-right: 20px;
+  padding-bottom: 6px;
+}
+
+body > header h1 a:hover > span,
+body > header nav ul > li a:hover > span {
+  color: #000;
+  border-bottom: 1px dotted #CCC;
+  padding-bottom: 5px;
 }
 
 /* Print styles!
