--- a/template/css/main.css
+++ b/template/css/main.css
@@ -239,7 +239,7 @@ body > header nav ul > li a {
   display: block;
   margin: 0 1.5em;
   font-size: 1.4em;
-  color: #555;
+  color: #333;
   text-decoration: none;
   width: 100%; 
 }
@@ -258,6 +258,10 @@ body > header nav ul > li a:hover > span {
   color: #000;
   border-bottom: 1px dotted #CCC;
   padding-bottom: 5px;
+}
+
+body > header h1 a:hover {
+  color: #990000;
 }
 
 /* Print styles!
