Implemented LESS CSS framework structure.

--- a/template/css/main.less
+++ b/template/css/main.less
@@ -68,12 +68,12 @@ pre {
 }
 
 input[type="radio"] {vertical-align: text-bottom;}
-input[type="checkbox"] {vertical-align: bottom; *vertical-align: baseline;}
+/*input[type="checkbox"] {vertical-align: bottom; *vertical-align: baseline;}*/
 .ie6 input {vertical-align: text-bottom;}
 
 select, input, textarea {font: 99% sans-serif;}
 
-table {font-size: inherit; font: 100%;}
+table {font-size: inherit; font-size: 100%;}
  
 /* Accessible focus treatment
 	people.opera.com/patrickl/experiments/keyboard/test */
@@ -110,13 +110,10 @@ button {width: auto; overflow: visible;}
 /* scale images in IE7 more attractively */
 .ie7 img {-ms-interpolation-mode: bicubic;}
 
-/* prevent BG image flicker upon hover */
-.ie6 html {filter: expression(document.execCommand("BackgroundImageCache", false, true));}
-
 /* let's clear some floats */
 .clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }  
 .clearfix:after { clear: both; }  
-.clearfix { zoom: 1; }  
+.clearfix { zoom: 1; }
 
 
 
@@ -569,7 +566,7 @@ body > header nav ul > li a:hover {
   width: 580px;
 }
 
-.article . article_meta {
+.article .article_meta {
   float: left;
 }
 
