--- a/template/css/main.less
+++ b/template/css/main.less
@@ -147,31 +147,6 @@ mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: b
 /* Main styles! @author Casey McLaughlin
 -------------------------------------------------------------------------------*/
 
-/* Fonts ----------------------------------------------------------------------*/
-@font-face {
-    font-family: 'VollkornRegular';
-    src: url('../fonts/vollkorn/Vollkorn-Regular-webfont.eot');
-    src: url('../fonts/vollkorn/Vollkorn-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/vollkorn/Vollkorn-Regular-webfont.woff') format('woff'),
-         url('../fonts/vollkorn/Vollkorn-Regular-webfont.ttf') format('truetype'),
-         url('../fonts/vollkorn/Vollkorn-Regular-webfont.svg#VollkornRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'VollkornBold';
-    src: url('../fonts/vollkorn/Vollkorn-Bold-webfont.eot');
-    src: url('../fonts/vollkorn/Vollkorn-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/vollkorn/Vollkorn-Bold-webfont.woff') format('woff'),
-         url('../fonts/vollkorn/Vollkorn-Bold-webfont.ttf') format('truetype'),
-         url('../fonts/vollkorn/Vollkorn-Bold-webfont.svg#VollkornBold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-
 /* Main Styles ----------------------------------------------------------------*/
 
 a, a:hover, a:active, a:focus {
@@ -181,7 +156,7 @@ a, a:hover, a:active, a:focus {
  body, p {
 	 font-family: Verdana, Geneva, Helvetica, sans-serif;
 	 font-size: 16px;
-	 line-height: 21px;
+	 line-height: 1.5;
  }
  
  hr {
@@ -190,8 +165,8 @@ a, a:hover, a:active, a:focus {
  }
  
  p {
-	 margin-top: 1.2em;
-	 margin-bottom: 1.2em;
+	 margin-top: 1.5em;
+	 margin-bottom: 1.5em;
  }
  
  strong {
