--- a/template/css/main.less
+++ b/template/css/main.less
@@ -1,151 +1,9 @@
-/*
-	HTML5 Reset :: style.css
-	----------------------------------------------------------
-	We have learned much from/been inspired by/taken code where offered from:
-	
-	Eric Meyer					:: http://ericmeyer.com
-	HTML5 Doctor				:: http://html5doctor.com
-	and the HTML5 Boilerplate	:: http://html5boilerplate.com
-	
+/* CaseyMcLaughlin.com LESS Stylesheet
 -------------------------------------------------------------------------------*/
 
-/* Let's default this puppy out
--------------------------------------------------------------------------------*/
+/* Imports --------------------------------------------------------------------*/
 
-html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, hgroup, menu, nav, section, time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-	vertical-align: baseline;
-	background: transparent;
-}									
-
-article, aside, figure, footer, header, hgroup, nav, section {display: block;}
-
-/* Responsive images and other embedded objects
-   Note: keeping IMG here will cause problems if you're using foreground images as sprites.
-   If this default setting for images is causing issues, you might want to replace it with a .responsive class instead. */
-img,
-object,
-embed {max-width: 100%;}
-
-/* force a vertical scrollbar to prevent a jumpy page */
-html {overflow-y: scroll;}
-
-/* we use a lot of ULs that aren't bulleted. 
-	don't forget to restore the bullets within content. */
-ul {list-style: none;}
-
-blockquote, q {quotes: none;}
-
-blockquote:before, 
-blockquote:after, 
-q:before, 
-q:after {content: ''; content: none;}
-
-a {margin: 0; padding: 0; font-size: 100%; vertical-align: baseline; background: transparent;}
-
-del {text-decoration: line-through;}
-
-abbr[title], dfn[title] {border-bottom: 1px dotted #000; cursor: help;}
-
-/* tables still need cellspacing="0" in the markup */
-table {border-collapse: collapse; border-spacing: 0;}
-th {font-weight: bold; vertical-align: bottom;}
-td {font-weight: normal; vertical-align: top;}
-
-hr {display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0;}
-
-input, select {vertical-align: middle;}
-
-pre {
-	white-space: pre; /* CSS2 */
-	white-space: pre-wrap; /* CSS 2.1 */
-	white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
-	word-wrap: break-word; /* IE */
-}
-
-input[type="radio"] {vertical-align: text-bottom;}
-/*input[type="checkbox"] {vertical-align: bottom; *vertical-align: baseline;}*/
-.ie6 input {vertical-align: text-bottom;}
-
-select, input, textarea {font: 99% sans-serif;}
-
-table {font-size: inherit; font-size: 100%;}
- 
-/* Accessible focus treatment
-	people.opera.com/patrickl/experiments/keyboard/test */
-a:hover, a:active {outline: none;}
-
-small {font-size: 85%;}
-
-strong, th {font-weight: bold;}
-
-td, td img {vertical-align: top;} 
-
-/* Make sure sup and sub don't screw with your line-heights
-	gist.github.com/413930 */
-sub, sup {font-size: 75%; line-height: 0; position: relative;}
-sup {top: -0.5em;}
-sub {bottom: -0.25em;}
-
-/* standardize any monospaced elements */
-pre, code, kbd, samp {font-family: monospace, sans-serif;}
-
-/* hand cursor on clickable elements */
-.clickable,
-label, 
-input[type=button], 
-input[type=submit], 
-button {cursor: pointer;}
-
-/* Webkit browsers add a 2px margin outside the chrome of form elements */
-button, input, select, textarea {margin: 0;}
-
-/* make buttons play nice in IE */
-button {width: auto; overflow: visible;}
- 
-/* scale images in IE7 more attractively */
-.ie7 img {-ms-interpolation-mode: bicubic;}
-
-/* let's clear some floats */
-.clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }  
-.clearfix:after { clear: both; }  
-.clearfix { zoom: 1; }
-
-
-
-/* Ok, this is where the fun starts.
--------------------------------------------------------------------------------*/
-
-/* new Linux- and Windows-friendly sans-serif font stack: http://mky.be/fontstack */
-body {font: 13px Helmet, Freesans, sans-serif;}
-
-/* using local fonts? make sure to read up on Paul Irish's 
-	Bulletproof @font-face syntax: http://mky.be/font-face/bulletproof/ */
-
-/* we like off-black for text */
-body, select, input, textarea {color: #333;}
-
-a {color: #03f;}
-a:hover {color: #69f;}
-
-/* Custom text-selection colors (remove any text shadows: twitter.com/miketaylr/status/12228805301) */
-::-moz-selection{background: #fcd700; color: #fff; text-shadow: none;}
-::selection {background: #fcd700; color: #fff; text-shadow: none;} 
-
-/*	j.mp/webkit-tap-highlight-color */
-a:link {-webkit-tap-highlight-color: #fcd700;} 
-
-ins {background-color: #fcd700; color: #000; text-decoration: none;}
-mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: bold;}
-
-
-
-/* Main styles! @author Casey McLaughlin
--------------------------------------------------------------------------------*/
+@import url("grid.less");
 
 /* Main Styles ----------------------------------------------------------------*/
 
@@ -360,200 +218,38 @@ a, a:hover, a:active, a:focus {
 
 /* Layout ---------------------------------------------------------------------*/
 
+@body-bgcolor: #CCC;
+@head-bgcolor: #F1F1F1;
+@main-bgcolor: #FFF;
+
 body {
-  background-color: #444;
+  margin: 0;
+  padding: 0;
+  background-color: @body-bgcolor;
+  
+  header {
+    background-color: @head-bgcolor;
+  }
+  
+  #main {
+    background-color: @main-bgcolor;
+  }
 }
 
-body > header {
-  background-color: #F1F1F1;
-  border-bottom: 2px solid #E0E0E0;
-}
-
-body > #main {
-  background-color: #FFF;
-}
-
-body  > footer {
-  color: #FFF;
+body > header,
+body > #main,
+body > footer {
+  margin: 0;
+  .clearfix;
 }
 
 body > header > .content,
-body > #main  > .content, 
+body >  #main > .content,
 body > footer > .content {
+  width: @total-width;
   margin: 0 auto;
-  padding: 20px 0;
-  width: 960px;
 }
-
-body > header h1 {
-  float: left;
-  font-size: 1.4em;
-  width: 20%;
-  font-weight: normal;
-}
-
-body > header h1 a {
-  font-family: Vollkorn, serif;
-  display: block;
-  color: #333;
-  text-decoration: none;
-}
-
-body > header h1 a span {
-  font-family: Tahoma, Geneva, sans-serif;
-  display: block;
-  color: #000;
-  font-size: 14px;
-  margin-right: 20px;
-  padding-bottom: 6px;
-}
-
-
-body > header nav ul > li {
-  float: left;
-  width: 20%;
-}
-
-body > header nav ul > li a {
-  font-family: Vollkorn, serif;
-  display: block;
-  margin: 0 1.5em;
-  font-size: 1.4em;
-  color: #333;
-  text-decoration: none;
-  width: 100%; 
-}
-
-body > header nav ul > li a > span {
-  font-family: Tahoma, Geneva, sans-serif;
-  display: block;
-  color: #000;
-  font-size: 14px;
-  margin-right: 20px;
-  padding-bottom: 6px;
-}
-
-body > header h1 a:hover > span,
-body > header nav ul > li a:hover > span {
-  color: #000;
-  border-bottom: 1px dotted #CCC;
-  padding-bottom: 5px;
-}
-
-body > header h1 a:hover,
-body > header nav ul > li a:hover {
-  color: #990000;
-}
-
-/* Layout Widgets--------------------------------------------------------------*/
-
-.section_intro {
-  clear: both;
-}
-
-.section_intro > .section_intro_blurb {
-  width: 55%;
-  float: left;
-}
-
-.section_intro > .section_auxiliary_info {
-  width: 40%;
-  float: left;
-}
-
-.section_auxiliary_info h3 {
-  border-bottom: none;
-  font-family: Tahoma, Geneva, sans-serif;
-  font-size: 1em;
-  font-weight: bold;
-}
-
-.section_auxiliary_info li {
-  float: left;
-  margin: 0 5px;
-  padding: 0 8px;
-  border-radius: 5px;
-}
-
-.section_auxiliary_info li:hover {
-  background-color: #E4E4E4;
-}
-
-.tile_list {
-  margin: 5px auto;
-}
-
-.tile_list > li {
-  width: 45%;
-  float: left;
-  margin: 0 2.5% 2em 2.5%;
-}
-
-.tile_list > li h5 {
-  margin: 2px 0;
-}
-
-.tile_list > li p {
-  margin: 2px 0 0 80px;
-}
-
-.tile_list > li p .more_link {
-  display: block;
-}
-
-.tile_list > li img {
-  float: left;
-  margin: 2px 5px 0 0;
-}
-
-.article_list_year {
-  margin-top: 1em;
-}
-
-.article_list {
-  list-style-type: disc;
-  margin-left: 30px;
-}
-
-.article_list li:hover {
-  background-color: #F1F1F1;
-}
-
-.article_list li:hover a .summary {
-  color: #000;
-}
-
-.article_list a {
-  color: #000;
-  text-decoration: none;
-  display: block;
-  padding: 5px 3px;
-}
-
-.article_list a .summary {
-  color: rgb(85, 85, 85);
-  display: block;
-  font-size: 0.9em;
-}
-
-.article .article_content {
-  float: left;
-  width: 580px;
-}
-
-.article .article_meta {
-  float: left;
-}
-
-/* Print styles!
--------------------------------------------------------------------------------*/
-@media print {
-
-
-
-}
-
-
+ 
 /* Media queries!
 -------------------------------------------------------------------------------*/
 
