--- a/template/css/06-print.css
+++ b/template/css/06-print.css
@@ -5,16 +5,20 @@
     text-shadow: none !important;
 }
 
-a,
-a:visited {
+#main a,
+#main a:visited {
     text-decoration: underline;
 }
 
-a[href]:after {
+#main a[href]:after {
     content: " (" attr(href) ")";
 }
 
-abbr[title]:after {
+#main .noprintlinks a[href]:after {
+    content: "";
+}
+
+#main abbr[title]:after {
     content: " (" attr(title) ")";
 }
 
@@ -22,9 +26,9 @@ abbr[title]:after {
  * Don't show links for images, or javascript/internal links
  */
 
-.ir a:after,
-a[href^="javascript:"]:after,
-a[href^="#"]:after {
+#main .ir a:after,
+#main a[href^="javascript:"]:after,
+#main a[href^="#"]:after {
     content: "";
 }
 
@@ -61,4 +65,8 @@ h3 {
 h2,
 h3 {
     page-break-after: avoid;
+}
+
+body > header {
+    display: none;
 }
