--- a/template/css/06-print.css
+++ b/template/css/06-print.css
@@ -67,6 +67,10 @@ h3 {
     page-break-after: avoid;
 }
 
-body > header {
+/*
+ * Layotu rules
+ */
+body > header,
+body > footer {
     display: none;
 }
