Working on the Twig template extensions

--- a/templates/html.twig
+++ b/templates/html.twig
@@ -24,11 +24,8 @@
         </h1>
 
         <ul>
-          <li>Build</li>
-          <li>Nav</li>
-          <li>Here</li>
+          <li>{{ tools.navigation('/', 'Home') }}</li>
         </ul>
-        </div>
       </nav>
   </header>
   
