--- a/templates/html.twig
+++ b/templates/html.twig
@@ -6,12 +6,12 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     
-    <link rel="stylesheet" type="text/css" href="{{ _data.asset_url }}/css/01-reset.css" media="all" />
-    <link rel="stylesheet" type="text/css" href="{{ _data.asset_url }}/css/02-base.css"  media="all" />
-    <link rel="stylesheet" type="text/css" href="{{ _data.asset_url }}/css/03-typography.css" media="all"  />
-    <link rel="stylesheet" type="text/css" href="{{ _data.asset_url }}/css/04-skeleton.css"  media="all" />
-    <link rel="stylesheet" type="text/css" href="{{ _data.asset_url }}/css/05-layout.css"  media="all" />
-    <link rel="stylesheet" type="text/css" href="{{ _data.asset_url }}/css/06-print.css"  media="print" />
+    <link rel="stylesheet" type="text/css" href="{{ base_url }}/css/01-reset.css" media="all" />
+    <link rel="stylesheet" type="text/css" href="{{ base_url }}/css/02-base.css"  media="all" />
+    <link rel="stylesheet" type="text/css" href="{{ base_url }}/css/03-typography.css" media="all"  />
+    <link rel="stylesheet" type="text/css" href="{{ base_url }}/css/04-skeleton.css"  media="all" />
+    <link rel="stylesheet" type="text/css" href="{{ base_url }}/css/05-layout.css"  media="all" />
+    <link rel="stylesheet" type="text/css" href="{{ base_url }}/css/06-print.css"  media="print" />
 </head>
 
 <body>
@@ -20,20 +20,20 @@
             <nav class='container' role="navigation">
                 
                 <h1 class='four columns'>
-                    <a href='{{ _data.base_url }}'>Casey McLaughlin</a>
+                    <a href='{{ t.appUrl }}'>Casey McLaughlin</a>
                 </h1>
 
                 <ul>
-                    <li><a href='' title="Stuff I've written">Articles</a></li>
-                    <li><a href='' title='My calendar'>Calendar</a></li>
-                    <li><a href='' title='Resume and work'>Resume</a></li>
-                    <li><a href='' title='Code and other Stuff'>Code & Stuff</a></li>
+                    <li>{{ t.navLink('articles', 'Articles', "Stuff I have Written") | raw }}</li>
+                    <li>{{ t.navLink('calendar', 'Calendar', "My calendar") | raw }}</li>
+                    <li>{{ t.navLink('resume', 'Resume', "Resume and work") | raw }}</li>
+                    <li>{{ t.navLink('code', 'Code and Stuff', "Code and other stuffs") | raw }}</li>
                 </ul>
             </nav>
     </header>
     
     <div id="main" class='container'>
-            {{ _content }}
+            {{ _content | raw }}
     </div>
     
     <footer>
