Google calendar scraper pretty much working, and moved design into actual codebase

--- a/content/content.html.twig
+++ b/content/content.html.twig
@@ -1,26 +1,176 @@
-<div class='front'>
+<?php include('_header.php'); ?>
+    <div class='frontpage'>
 
-  <p class='intro'>
-    I am an IT Administrator, Instructor, and Application Developer in Tallahassee, Florida.
-  </p>
+        <section class='row-fluid'>
 
-  <ul>
-    <li>My CV</li>
-  </ul>
+            <div class='span4 left'>
+                <h1>Casey McLaughlin</h1>
+            </div>
 
-  <h2>Articles</h2>
-  <ul>
-    <li>Article 1 - Summary - Title, etc</li>
-    <li>Arte 2 - Summary - Title, asdf</li>
-    <li>Aasdf asdf - Summary - Title, asdf</li>
-  </ul>
+            <div class='span7 right'>
+                <p class='bigtext'>I am an IT Administrator, Instructor, and Application Developer in Tallahassee, Florida.</p>
+                <p>
+                    <a href='calendar' class='big-shiny-link'><i class="icon-calendar"></i> My Calendar <span class='go'>&raquo;</span></a>
+                    <a href='resume' class='big-shiny-link'><i class="icon-edit"></i> My Resume <span class='go'>&raquo;</span></a>
+                </P>
+            </div>
 
-  <h2>Code</h2>
-  <ul>
-    <li>Projects on Github &raquo;</li>
-    <li>Code Project One - Some Summary and Description</li>
-    <li>Code Project One - Some Summary and Description</li>
-    <li>Code Project One - Some Summary and Description</li>
-    <li>Code Project One - Some Summary and Description</li>
-  </ul>
-</div>
+        </section>
+
+        <section class='row-fluid'>
+
+            <div class='span4 left'>
+                <h2>Code</h2>
+            </div>
+
+            <div class='span7 right'>
+                <ul class='itemlist'>
+                    <li class='item highlight'>
+                        <a href='http://github.com/caseyamcl'>
+                            <i class="icon-circle-arrow-right"></i>                                      
+                            <span class='title'>My Github Profile</span>
+                        </a>
+                    </li>
+                    <li class='item'>
+                        <a href='#'>
+                            <i class="icon-play-circle"></i>                                      
+                            <span class='title'>PHP OAI-PMH Client</span>
+                            <span class='aux'>PHP Library</span>
+                            <span class='summary'>A client library that makes it easy to connect to and harvest data from OAI-PMH providers</span>
+                        </a>
+                    </li>
+                     <li class='item'>
+                        <a href='#'>
+                            <i class="icon-play-circle"></i>  
+                            <span class='title'>QuickJump</span>
+                            <span class='aux'>DokuWiki Theme</span>
+                            <span class='summary'>A nice looking theme for DokuWiki that is modelled after CodeIgniter User Guide</span>
+                        </a>
+                    </li>                                                 
+                </ul>
+            </div>
+
+        </section>                
+
+        <section class='row-fluid'>
+
+            <div class='span4 left'>
+                <h2>Work</h2>
+            </div>
+
+            <div class='span7 right'>
+                <ul class='itemlist'>
+                    <li class='item highlight'>
+                        <a href='#'>
+                            <i class="icon-circle-arrow-right"></i>                                      
+                            <span class='title'>View My Resume</span>
+                        </a>
+                    </li>
+                    <li class='item'>
+                        <a href='#'>
+                            <i class="icon-play-circle"></i>                                    
+                            <span class='title'>FSU LIS4368</span>
+                            <span class='aux'>Current</span>
+                            <span class='summary'>I teach LIS4368 - Advanced Web Development as a senior-level course at FSU</span>
+                        </a>                                
+                    </li>
+                    <li class='item'>
+                        <a href='#'>
+                            <i class="icon-play-circle"></i>                                    
+                            <span class='title'>RU@Risk</span>
+                            <span class='aux'>Current</span>
+                            <span class='summary'>A tailored messaging and research data management system</span>
+                        </a>                                
+                    </li>
+                     <li class='item'>
+                        <a href='#'>
+                            <i class="icon-play-circle"></i>                                    
+                            <span class='title'>STEER</span>
+                            <span class='aux'>Offline (2008)</span>
+                            <span class='summary'>A system for managing research</span>
+                        </a>
+                    </li>   
+                    
+                </ul>
+            </div>
+
+        </section>                
+
+
+        <section class='row-fluid'>
+
+            <div class='span4 left'>
+                <h2>Articles</h2>
+            </div>
+
+            <div class='span7 right'>
+                <ul class='itemlist'>
+                    <li class='item'>
+                        <a href='#'>
+                            <i class="icon-play-circle"></i>
+                            <span class='title'>Setup a Local Configuration File in CodeIgniter</span>
+                            <span class='aux'>2010 Sept 22</span>
+                            <span class='summary'>How to manage configuration settings for a single CodeIgniter application, when that application may have many different environments</span>
+                        </a>
+                    </li>
+                    <li class='item'>
+                        <a href='#'>
+                            <i class="icon-play-circle"></i>
+                            <span class='title'>Playing with Asyncrhonous PHP Processing</span>
+                            <span class='aux'>2010 Oct 15</span>
+                            <span class='summary'>I present a concept for creating a worker-process for asynchronous job queue processing in PHP using CRON</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+        </section> 
+
+        <section class='row-fluid'>
+
+            <div class='span4 left'>
+                <h2>Presentations</h2>
+            </div>
+
+            <div class='span7 right'>
+                <ul class='itemlist'>
+                    <li class='item'>
+                        <a href='#'>
+                            <i class="icon-play-circle"></i>
+                            <span class='title'>Taking your Code to the Next Level</span>
+                            <span class='aux'>Slides - 2012 Jan 5</span>
+                            <span class='summary'>Tallahassee PHP User Group presentation talking about Composer, PSR standards, and other new-ish PHP things</span>
+                        </a>
+                    </li>                            
+                    <li class='item'>
+                        <a href='#'>
+                            <i class="icon-play-circle"></i>
+                            <span class='title'>Introduction to REST</span>
+                            <span class='aux'>Slides - 2012 Jan 5</span>
+                            <span class='summary'>Tallahassee PHP User Group introducing feldgling PHP developers to RESTful architecture and related design decisions</span>
+                        </a>
+                    </li>                            
+                </ul>
+            </div>
+
+        </section> 
+
+
+        <section class='row-fluid'>
+
+            <div class='span4 left'>
+                <h2>Also Find Me At</h2>
+            </div>
+
+            <div class='span7 right'>
+                <ul>
+                    <li>Facebook</li>
+                    <li>Twitter</li>
+                    <li>LinkedIn</li>
+                </ul>
+            </div>
+
+        </section> 
+
+    </div>
+<?php include('_footer.php'); ?>
