--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,16 +1,26 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8"/>
-    <title>Casey McLaughlin</title>
-</head>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Casey McLaughlin | This is my Website</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<body>
+        <link href="{{ base_url }}/assets/css/bootstrap.css" rel="stylesheet">
+        <link href="{{ base_url }}/assets/css/bootstrap-responsive.css" rel="stylesheet">
+        <link href="{{ base_url }}/assets/css/main.css" rel="stylesheet">
+    </head>
+    <body>
+        
+        <div class='container'>
 
-    <h1>Header</h1>
+            {% block content %}
+            {% endblock %}
 
-    {% block content %}
-    {% endblock %}
+            <footer>
+                <p>cc Casey McLaughlin</p>
+            </footer>
+        </div>
 
-</body>
+        <script type='text/javascript' src='{{ base_url }}/assets/js/bootstrap.min.js'></script>
+
+    </body>
 </html>
