Got templates per controller working

--- a/content/calendar/content.html.twig
+++ b/content/calendar/content.html.twig
@@ -1,17 +1,21 @@
-<div class="big-calendar-container sixteen columns">
+<div class="big-calendar-container row-fluid span12">
 	<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=caseyamcl%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FNew_York" style=" border-width:0 " width="940" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
 
 
 
-<div class="medium-calendar-container sixteen columns">
+<div class="medium-calendar-container row-fluid span12">
 	<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=caseyamcl%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FNew_York" style=" border-width:0 " width="755" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
 
 
 
-<div class="little-calendar-container sixteen columns">
-	
+<div class="little-calendar-container row-fluid span12">
+
+	<p>Hiya</p>
+	<p>Left off here... Need to rewrite this stuff below to use twig template</p>
+
+	<!-- 
 	<?php 
 		require_once(__DIR__ . '/simple_html_dom.php');
 		
@@ -54,7 +58,7 @@
 		}
 		
 		echo "<ul class='calendar_agenda'>" . implode("\n", $cal_items) . "</ul>";
-	?>
+	?> -->
 	
 	<p class='calendar_agenda_more_link'>
 		<a href="https://www.google.com/calendar/embed?src=caseyamcl%40gmail.com&ctz=America/New_York" title="My Calendar at Google.com"></a>
