--- a/templates/article.html.twig
+++ b/templates/article.html.twig
@@ -1,4 +1,26 @@
 {% extends 'base.html.twig' %}
+{% block page_css %}
+<style type='text/css'>
+    article > header {
+        text-align: center;
+        border-bottom: 1px solid #CCC;
+        margin-bottom: 2em;
+    }
+
+    article > footer {
+        text-align: center;
+        font-size: 0.9em;
+        color: #666;
+    }
+
+    article section.article-content p,
+    article section.article-content ul,
+    article section.article-content ol {
+        line-height: 1.5em;
+        margin-bottom: 1.3em;
+    }
+</style>
+{% endblock %}
 {% block content %}
 
 <article class='row-fluid'>
