--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,8 @@
         <link href="{{ base_url }}/assets/css/bootstrap.css" rel="stylesheet">
         <link href="{{ base_url }}/assets/css/bootstrap-responsive.css" rel="stylesheet">
         <link href="{{ base_url }}/assets/css/main.css" rel="stylesheet">
+        {% block page_headers %}
+        {% endblock %}
     </head>
     <body>
         
