--- a/templates/calendar.html.twig
+++ b/templates/calendar.html.twig
@@ -1,108 +1,150 @@
 {% extends 'base.html.twig' %}
 {% block page_headers %}
-<style type='text/css'>
+    <style type='text/css'>
 
-    .calendar_agenda {
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-    }
+        .calendar_agenda {
+            margin: 0;
+            padding: 0;
+            list-style-type: none;
+        }
 
-    .calendar_agenda .cal_dateline {
-        display: block;
-        margin: 2px 0;
-        padding: 3px;
-        background-color: #E4E4E4;
-        border-radius: 5px;
-    }
-
-    .calendar_agenda .cal_dateline .cal_dow:after {
-        content: ", ";
-    }
-
-    .calendar_agenda .cal_dateline .cal_month:after {
-        content: " ";
-    }
-
-    .calendar_agenda .cal_dateline .cal_year {
-        display: none;
-    }
-
-    .calendar_agenda .cal_dateitems {
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-        
-    }
-
-    .calendar_agenda .cal_dateitems > li {
-        border-top: 1px solid #CCC; 
-        padding: 5px 0;
-        list-style-type: none;
-    }
-
-    .calendar_agenda .cal_dateitems > li:first-child {
-        border-top: none;
-    }
-
-    .calendar_agenda .cal_dateitems .cal_time,
-    .calendar_agenda .cal_dateitems .cal_allday {
-        font-weight: bold;
-        font-color: blue;
-        display: block;
-        float: left;
-        width: 90px;
-    }
-
-    .calendar_agenda .cal_dateitems .cal_title,
-    .calendar_agenda .cal_dateitems .cal_loc {
-        margin: 0 0 4px 90px;
-        display: block;
-    }
-
-    .calendar_agenda .cal_dateitems .cal_loc {
-        font-size: 0.9em;
-        color: #444;
-    }
-
-    /* Responsive Behavior ------------------------------------------------------*/
-
-    /* All Big Monitors */
-    @media only screen and (min-width: 960px)  {
-        .big-calendar-container {
+        .calendar_agenda .cal_dateline {
             display: block;
+            margin: 2px 0;
+            padding: 3px;
+            background-color: #E4E4E4;
+            border-radius: 5px;
         }
-        .medium-calendar-container,
-        .little-calendar-container {
-            display: none;
-        }
-    }
 
-    /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
-    @media only screen and (min-width: 768px) and (max-width: 959px) {
-        .medium-calendar-container {
-            display: block;
+        .calendar_agenda .cal_dateline .cal_dow:after {
+            content: ", ";
         }
-        .big-calendar-container,
-        .little-calendar-container {
+
+        .calendar_agenda .cal_dateline .cal_month:after {
+            content: " ";
+        }
+
+        .calendar_agenda .cal_dateline .cal_year {
             display: none;
         }
 
-    }
+        .calendar_agenda .cal_dateitems {
+            margin: 0;
+            padding: 0;
+            list-style-type: none;
+            
+        }
 
-    /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
-    @media only screen and (max-width: 767px) {
-        .little-calendar-container {
+        .calendar_agenda .cal_dateitems > li {
+            border-top: 1px solid #CCC; 
+            padding: 5px 0;
+            list-style-type: none;
+        }
+
+        .calendar_agenda .cal_dateitems > li:first-child {
+            border-top: none;
+        }
+
+        .calendar_agenda .cal_dateitems .cal_time,
+        .calendar_agenda .cal_dateitems .cal_allday {
+            font-weight: bold;
+            font-color: blue;
+            display: block;
+            float: left;
+            width: 90px;
+        }
+
+        .calendar_agenda .cal_dateitems .cal_title,
+        .calendar_agenda .cal_dateitems .cal_loc {
+            margin: 0 0 4px 90px;
             display: block;
         }
-        .big-calendar-container,
-        .medium-calendar-container {
-            display: none;
+
+        .calendar_agenda .cal_dateitems .cal_loc {
+            font-size: 0.9em;
+            color: #444;
         }
 
-    }
-</style>
+        /* Responsive Behavior ------------------------------------------------------*/
+
+        /* All Big Monitors */
+        @media only screen and (min-width: 960px)  {
+            .big-calendar-container {
+                display: block;
+            }
+            .medium-calendar-container,
+            .little-calendar-container {
+                display: none;
+            }
+        }
+
+        /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+        @media only screen and (min-width: 768px) and (max-width: 959px) {
+            .medium-calendar-container {
+                display: block;
+            }
+            .big-calendar-container,
+            .little-calendar-container {
+                display: none;
+            }
+
+        }
+
+        /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+        @media only screen and (max-width: 767px) {
+            .little-calendar-container {
+                display: block;
+            }
+            .big-calendar-container,
+            .medium-calendar-container {
+                display: none;
+            }
+
+        }
+    </style>
 {% endblock %}
 {% block content %}
-    {{ content | raw }}
+    <div class="big-calendar-container row-fluid span12">
+        <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=caseyamcl%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FNew_York" style=" border-width:0 " width="940" height="600" frameborder="0" scrolling="no"></iframe>
+    </div>
+
+    <div class="medium-calendar-container row-fluid span12">
+        <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=caseyamcl%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FNew_York" style=" border-width:0 " width="755" height="600" frameborder="0" scrolling="no"></iframe>
+    </div>
+
+    <div class="little-calendar-container row-fluid span12">
+        <ul class='calendar_agenda'>
+            {% for currdate, events in events.getByDate %}
+
+                <li class='cal_datelist'>
+                    <p class='cal_dateline'>
+                        <span class='cal_dow'>{{ currdate | date('D') }}</span>
+                        <span class='cal_month'>{{ currdate | date('M') }}</span>
+                        <span class='cal_date'>{{ currdate | date('j') }}</span>
+                        <span class='cal_year'>{{ currdate | date('Y') }}</span>
+                    </p>
+                    <ul class='cal_dateitems'>
+
+                        {% for event in events %}
+                            <li>
+                                {% if event.allDay == true %}
+                                    <span class='cal_allday'>All Day</span>
+                                {% else %}
+                                    <span class='cal_time'>{{ event.beginTime | date('H:ia') }}</span>
+                                {% endif %}
+
+                                <span class='cal_title'>{{ event.summary }}</span>
+                            </li>
+                        {% endfor %}
+
+                    </ul>
+                </li>
+
+            {% endfor %}
+        </ul>
+
+        <p class='calendar_agenda_more_link'>
+            <a href="{{ calendar_link }}" title="My Calendar at Google.com">View More</a>
+        </p>        
+    </div>
 {% endblock %}
